...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE2E2"
    tools:context=".TaskDetailActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="80dp"
        android:text="Title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="331dp"
        android:layout_height="78dp"
        android:layout_marginTop="184dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
Donec scelerisque sollicitudin enim eu venenatis. "
...
